refactor!: Api Changes, add `apiError` field for error response, `errorType` change to `kind` and `errorDescription` change to `description`  BREAKING CHANGES!
