# internal/files/models/api.go
@@ -1,6 +1,10 @@
 package models
 
+type Error struct {
+	Kind        string `json:"kind"`
+	Description string `json:"description"`
+}
+
 type ApiError struct {
-	Type        string `json:"errorType"`
-	Description string `json:"errorDescription"`
+	*Error `json:"apiError"`
 }
